--- a/filesource-C0001.yml
+++ b/filesource-C0001.yml
@@ -1,4 +1,7 @@
 {
+"source_config":{
+"source_map":{
+"C0001":{
     "source":{
     "source_export": "person",
     "url_DB": "jdbc:postgresql://localhost:5432/c0001",
@@ -123,5 +126,8 @@
 
       }
     ]
+  }
+  }
+  }
   }
 }
