--- a/filesource-SIN_ACRA.yml
+++ b/filesource-SIN_ACRA.yml
@@ -1,4 +1,7 @@
 {
+"source_config":{
+"source_map":{
+"SIN_ACRA":{
 "source":{
     "source_export": "person",
     "url_DB": "jdbc:postgresql://localhost:5432/gov_sin_csv",
@@ -123,5 +126,8 @@
 
       }
     ]
+    }
+    }
+    }
     }
 }
