--- a/filesource-SIN_ACRA.yml
+++ b/filesource-SIN_ACRA.yml
@@ -142,18 +142,15 @@ BEGIN
         exporting_time          varchar,
         number_of_correct_lines bigint,
         number_of_wrong_lines   bigint,
-        wrong_lines             jsonb
+        wrong_lines             varchar[]
     );
 
     insert into export_statistic(size, started_export, finished_export, exporting_time, number_of_correct_lines,
-                       number_of_wrong_lines, wrong_lines)
+                                 number_of_wrong_lines, wrong_lines)
     VALUES ((Select count(*) from additional), (Select session_start_export from session),
             (Select session_finish_export from session), (Select session_time_export from session),
             ((Select count(*) from additional) - (Select array_length(arr, 1))), (Select array_length(arr, 1)),
-            (SELECT json_agg(a)
-             from (SELECT *
-                   FROM additional) a
-             where uen = any(arr[0:1000])));
+            arr);
 end;
 $$;"
             },
