--- a/filesource-SIN_ACRA.yml
+++ b/filesource-SIN_ACRA.yml
@@ -202,35 +202,35 @@
                 ],
                 "table_name": "additional",
                 "table_columns": [
-                    "id"
-                    "name"
-                    "raw_code"
-                    "sic_type"
-                    "raw_value"
-                    "country_code"
-                    "uuid"
-                    "faxes"
-                    "emails"
-                    "phones"
-                    "zip"
-                    "city"
-                    "address1"
-                    "address2"
-                    "country_region"
-                    "country"
-                    "websites"
-                    "additional"
-                    "company_uuid"
-                    "coordinate_lat"
-                    "coordinate_long"
-                    "legal_form"
-                    "description"
-                    "updated_date"
-                    "company_status"
-                    "employees_number"
-                    "incorporation_date"
-                    "registration_number"
-                    "file_source_id"
+                    "id",
+                    "name",
+                    "raw_code",
+                    "sic_type",
+                    "raw_value",
+                    "country_code",
+                    "uuid",
+                    "faxes",
+                    "emails",
+                    "phones",
+                    "zip",
+                    "city",
+                    "address1",
+                    "address2",
+                    "country_region",
+                    "country",
+                    "websites",
+                    "additional",
+                    "company_uuid",
+                    "coordinate_lat",
+                    "coordinate_long",
+                    "legal_form",
+                    "description",
+                    "updated_date",
+                    "company_status",
+                    "employees_number",
+                    "incorporation_date",
+                    "registration_number",
+                    "file_source_id",
                     "created"
                 ],
                 "before_process": {
