--- a/filesource-SIN_ACRA.yml
+++ b/filesource-SIN_ACRA.yml
@@ -202,36 +202,38 @@
                 ],
                 "table_name": "additional",
                 "table_columns": [
-                    "id",
-                    "name",
-                    "raw_code",
-                    "sic_type",
-                    "raw_value",
-                    "country_code",
-                    "uuid",
-                    "faxes",
-                    "emails",
-                    "phones",
-                    "zip",
-                    "city",
-                    "address1",
-                    "address2",
-                    "country_region",
-                    "country",
-                    "websites",
-                    "additional",
-                    "company_uuid",
-                    "coordinate_lat",
-                    "coordinate_long",
-                    "legal_form",
-                    "description",
-                    "updated_date",
-                    "company_status",
-                    "employees_number",
-                    "incorporation_date",
-                    "registration_number",
-                    "file_source_id",
-                    "created"
+                    "business_constitution_description",
+                    "primary_ssic_description",
+                    "primary_user_described_activity",
+                    "street_name",
+                    "entity_status_description",
+                    "annual_return_date",
+                    "postal_code",
+                    "paid_up_capital10_preference",
+                    "entity_name",
+                    "paid_up_capital2_others",
+                    "name_of_audit_firm3",
+                    "address_type",
+                    "paid_up_capital9_currency",
+                    "paid_up_capital8_ordinary",
+                    "paid_up_capital6_others",
+                    "paid_up_capital6_ordinary",
+                    "level_no",
+                    "paid_up_capital9_others",
+                    "former_entity_name9",
+                    "paid_up_capital7_currency",
+                    "paid_up_capital6_preference",
+                    "paid_up_capital4_currency",
+                    "secondary_ssic_code",
+                    "paid_up_capital7_preference",
+                    "paid_up_capital1_preference",
+                    "paid_up_capital2_preference",
+                    "uen",
+                    "uen_issue_date",
+                    "no_of_officers",
+                    "former_entity_name3",
+                    "date_of_source",
+                    "file_source_id"
                 ],
                 "before_process": {
                     "0": {
@@ -300,7 +302,7 @@
                     },
                     "1": {
                         "name": "delete duplicates",
-                        "action": "DELETE\r\nFROM additional\r\nWHERE id IN (SELECT id\r\n             FROM (SELECT id,\r\n                          ROW_NUMBER()\r\n                          OVER ( PARTITION BY id\r\nname                ,\r\nraw_code            ,\r\nsic_type            ,\r\nraw_value           ,\r\ncountry_code        ,\r\nuuid                ,\r\nfaxes               ,\r\nemails              ,\r\nphones              ,\r\nzip                 ,\r\ncity                ,\r\naddress1            ,\r\naddress2            ,\r\ncountry_region      ,\r\ncountry             ,\r\nwebsites            ,\r\nadditional          ,\r\ncompany_uuid        ,\r\ncoordinate_lat      ,\r\ncoordinate_long     ,\r\nlegal_form          ,\r\ndescription         ,\r\nupdated_date        ,\r\ncompany_status      ,\r\nemployees_number    ,\r\nincorporation_date  ,\r\nregistration_number ,\r\nfile_source_id      ,\r\ncreated             ) AS row_num\r\n                   FROM additional) t\r\n             WHERE t.row_num > 1);",
+                        "action": "DELETE\r\nFROM additional\r\nWHERE id IN (SELECT id\r\n             FROM (SELECT id,\r\n                          ROW_NUMBER()\r\n                          OVER ( PARTITION BY name                ,\r\nraw_code            ,\r\nsic_type            ,\r\nraw_value           ,\r\ncountry_code        ,\r\nuuid                ,\r\nfaxes               ,\r\nemails              ,\r\nphones              ,\r\nzip                 ,\r\ncity                ,\r\naddress1            ,\r\naddress2            ,\r\ncountry_region      ,\r\ncountry             ,\r\nwebsites            ,\r\nadditional          ,\r\ncompany_uuid        ,\r\ncoordinate_lat      ,\r\ncoordinate_long     ,\r\nlegal_form          ,\r\ndescription         ,\r\nupdated_date        ,\r\ncompany_status      ,\r\nemployees_number    ,\r\nincorporation_date  ,\r\nregistration_number ,\r\nfile_source_id      ,\r\ncreated             ) AS row_num\r\n                   FROM additional) t\r\n             WHERE t.row_num > 1);",
                         "expected_result": 0,
                         "true_next_step": 0,
                         "false_next_step": 0,
