--- a/filesource-SIN_ACRA.yml
+++ b/filesource-SIN_ACRA.yml
@@ -164,20 +164,26 @@
             "type": "string"
           },
           {
-            "name": "paid_up_capital1_preference",
+            "name": "paid_up_capital1_ordinary",
             "index": 24,
             "filter": "(?:^|\\W)na(?:$|\\W)|[\\\\\b\"\n|]",
             "type": "string"
           },
           {
-            "name": "paid_up_capital2_preference",
+            "name": "uen_of_audit_firm5",
             "index": 25,
             "filter": "(?:^|\\W)na(?:$|\\W)|[\\\\\b\"\n|]",
             "type": "string"
           },
           {
-            "name": "uen",
+            "name": "paid_up_capital1_preference",
             "index": 26,
+            "filter": "(?:^|\\W)na(?:$|\\W)|[\\\\\b\"\n|]",
+            "type": "string"
+          },
+          {
+            "name": "uen",
+            "index": 27,
             "filter": "(?:^|\\W)na(?:$|\\W)|[\\\\\b\"\n|]",
             "type": "string"
           }
@@ -191,6 +197,8 @@
             "country_code",
             "uuid",
             "fax",
+            "uid",
+            "type",
             "email",
             "phone",
             "zip",
@@ -200,7 +208,6 @@
             "country_region",
             "country",
             "website",
-            "additional",
             "company_uuid",
             "coordinate_lat",
             "coordinate_long",
@@ -267,7 +274,7 @@
           },
           "3": {
             "name": "create table if not exists",
-            "action": "CREATE TABLE IF NOT EXISTS additional\r\n(\r\n    id                  BIGSERIAL,\r\n    name                varchar,\r\n    raw_code            varchar,\r\n    sic_type            varchar,\r\n    raw_value           varchar,\r\n    country_code        varchar,\r\n    uuid                varchar,\r\n    fax                 varchar,\r\n    email               varchar,\r\n    phone               varchar,\r\n    zip                 varchar,\r\n    city                varchar,\r\n    address1            varchar,\r\n    address2            varchar,\r\n    country_region      varchar,\r\n    country             varchar,\r\n    website            varchar,\r\n    additional          varchar,\r\n    company_uuid        varchar,\r\n    coordinate_lat      varchar,\r\n    coordinate_long     varchar,\r\n    legal_form          varchar,\r\n    description         varchar,\r\n    updated_date        varchar,\r\n    company_status      varchar,\r\n    employees_number    varchar,\r\n    incorporation_date  integer,\r\n    registration_number varchar,\r\n    file_source_id      integer,\r\n    created             TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP\r\n);",
+            "action": "CREATE TABLE IF NOT EXISTS additional\r\n(\r\n    id                  BIGSERIAL,\r\n    name                varchar,\r\n    raw_code            varchar,\r\n    sic_type            varchar,\r\n    raw_value           varchar,\r\n    country_code        varchar,\r\n    uuid                varchar,\r\n    fax                 varchar,\r\n    uid               varchar,\r\n    type              varchar,\r\n    email               varchar,\r\n    phone               varchar,\r\n    zip                 varchar,\r\n    city                varchar,\r\n    address1            varchar,\r\n    address2            varchar,\r\n    country_region      varchar,\r\n    country             varchar,\r\n    website            varchar,\r\n    company_uuid        varchar,\r\n    coordinate_lat      varchar,\r\n    coordinate_long     varchar,\r\n    legal_form          varchar,\r\n    description         varchar,\r\n    updated_date        varchar,\r\n    company_status      varchar,\r\n    employees_number    varchar,\r\n    incorporation_date  integer,\r\n    registration_number varchar,\r\n    file_source_id      integer,\r\n    created             TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP\r\n);",
             "expected_result": 0,
             "true_next_step": 0,
             "false_next_step": 0,
@@ -281,7 +288,7 @@
           },
           "1": {
             "name": "delete duplicates",
-            "action": "DELETE\r\nFROM additional\r\nWHERE id IN (SELECT id\r\n             FROM (SELECT id,\r\n                          ROW_NUMBER()\r\n                          OVER ( PARTITION BY name,raw_code,\r\nsic_type        ,\r\nraw_value       ,\r\ncountry_code    ,\r\nuuid            ,\r\nfax          ,\r\nemail          ,\r\nphone          ,\r\nzip             ,\r\ncity            ,\r\naddress1        ,\r\naddress2        ,\r\ncountry_region  ,\r\ncountry         ,\r\nwebsite        ,\r\nadditional      ,\r\ncompany_uuid    ,\r\ncoordinate_lat  ,\r\ncoordinate_long ,\r\nlegal_form      ,\r\ndescription     ,\r\nupdated_date    ,\r\ncompany_status  ,\r\nemployees_number,\r\nincorporation_date,\r\nregistration_number ) AS row_num\r\n                   FROM additional) t\r\n             WHERE t.row_num > 1);",
+            "action": "DELETE\r\nFROM additional\r\nWHERE id IN (SELECT id\r\n             FROM (SELECT id,\r\n                          ROW_NUMBER()\r\n                          OVER ( PARTITION BY name,raw_code,\r\nsic_type        ,\r\nraw_value       ,\r\ncountry_code    ,\r\nuuid            ,\r\nfax          ,\r\nuid,\r\ntype,\r\nemail          ,\r\nphone          ,\r\nzip             ,\r\ncity            ,\r\naddress1        ,\r\naddress2        ,\r\ncountry_region  ,\r\ncountry         ,\r\nwebsite        ,\r\ncompany_uuid    ,\r\ncoordinate_lat  ,\r\ncoordinate_long ,\r\nlegal_form      ,\r\ndescription     ,\r\nupdated_date    ,\r\ncompany_status  ,\r\nemployees_number,\r\nincorporation_date,\r\nregistration_number ) AS row_num\r\n                   FROM additional) t\r\n             WHERE t.row_num > 1);",
             "expected_result": 0,
             "true_next_step": 0,
             "false_next_step": 0,
